CMAKE_MINIMUM_REQUIRED(VERSION 2.91.0)
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

PROJECT(LearningOpenGL)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

include(cmake/3rdparty.cmake)
include(cmake/config.cmake)

SET( EXCUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src/Hello)
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)
